@@ -52,7 +52,7 @@ default_settings = {
     'cloak_email_addresses': True,
     'pep_base_url': 'http://www.python.org/dev/peps/',
     'rfc_base_url': 'http://tools.ietf.org/html/',
-    'input_encoding': 'utf-8',
+    'input_encoding': 'utf-8-sig',
     'doctitle_xform': False,
     'sectsubtitle_xform': False,
 }
